--- a/css/style.css
+++ b/css/style.css
@@ -1,272 +1,273 @@
 * {
-    font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+  font-family: system-ui, -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto,
+    Oxygen, Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
 }
 
 body {
-    margin: 0
+  margin: 0;
+  background-color: #f5f5f5;
 }
 
 h1,
 h2,
 h3,
 h4 {
-    margin: 0;
-
+  margin: 0;
 }
 
 @media screen and (min-width: 740px) {
-    .hamburger {
-        position: relative;
-    }
+  .hamburger {
+    position: relative;
+  }
 
-    .logInHeader {
-        position: absolute;
-        top: -50px;
-    }
+  .logInHeader {
+    position: absolute;
+    top: -50px;
+  }
 }
 
 @media screen and (min-width: 741px) {
-    .hamburger {
-        position: absolute;
-        left: -40px;
-    }
+  .hamburger {
+    position: absolute;
+    left: -40px;
+  }
 
-    .glassIcon {
-        position: absolute;
-        top: -80px;
-    }
+  .glassIcon {
+    position: absolute;
+    top: -80px;
+  }
 
-    .logInHeader {
-        position: relative;
-        top: 0;
-    }
+  .logInHeader {
+    position: relative;
+    top: 0;
+  }
 }
 
 @media screen and (max-width: 740px) {
-    .logInHeader {
-        position: absolute;
-        top: -50px;
-    }
+  .logInHeader {
+    position: absolute;
+    top: -50px;
+  }
 
-    .inputContainer {
-        position: absolute;
-        top: -80px;
-    }
+  .inputContainer {
+    position: absolute;
+    top: -80px;
+  }
 
-    .asideLeft {
-        position: absolute;
-        left: -400px;
-    }
+  .asideLeft {
+    position: absolute;
+    left: -400px;
+  }
 }
 
 /* Estilos para pantallas grandes (mayores o iguales a 741px) */
 @media screen and (min-width: 741px) {
-    .logInHeader {
-        position: relative;
-        top: 0;
-    }
+  .logInHeader {
+    position: relative;
+    top: 0;
+  }
 
-    .inputContainer {
-        position: relative;
-        top: 0;
-    }
+  .inputContainer {
+    position: relative;
+    top: 0;
+  }
 
-    .inputGlass {
-        padding: 5px;
-        position: absolute;
-        top: 50%;
-        transform: translateY(-50%);
-        right: 1px;
-        margin-left: auto;
-        margin-right: auto;
-    }
+  .inputGlass {
+    padding: 5px;
+    position: absolute;
+    top: 50%;
+    transform: translateY(-50%);
+    right: 1px;
+    margin-left: auto;
+    margin-right: auto;
+  }
 
-    .inputGlass:hover {
-        background: #3b49df1a;
-        color: #3b49df;
-        border-radius: 5px;
-    }
+  .inputGlass:hover {
+    background: #3b49df1a;
+    color: #3b49df;
+    border-radius: 5px;
+  }
 }
 
 header {
-    position: relative;
-    display: flex;
-    justify-content: space-between;
-    background: #fff;
-    height: 60px;
+  position: relative;
+  display: flex;
+  justify-content: space-between;
+  background: #fff;
+  height: 60px;
 }
 
 .inputNav {
-    height: 28px;
-    width: 340px;
-    border: 1px solid #ccc;
-    border-radius: 5px;
+  height: 28px;
+  width: 340px;
+  border: 1px solid #ccc;
+  border-radius: 5px;
 }
 
 .hamburgerContainer {
-    display: flex;
-    align-items: center;
-    padding: 20px;
-    gap: 10px;
+  display: flex;
+  align-items: center;
+  padding: 20px;
+  gap: 10px;
 }
 
 .searchContainer {
-    position: relative;
-    display: flex;
-    align-items: center;
-    gap: 10px;
-    padding: 20px;
+  position: relative;
+  display: flex;
+  align-items: center;
+  gap: 10px;
+  padding: 20px;
 }
 
 #createAccountHeader {
-    text-decoration: none;
-    color: #3b49df;
-    font-size: 16px;
-    border-radius: 4px;
-    padding: 7px 15px;
-    border: 1px solid #3b49df;
+  text-decoration: none;
+  color: #3b49df;
+  font-size: 16px;
+  border-radius: 4px;
+  padding: 7px 15px;
+  border: 1px solid #3b49df;
 }
 
 #createAccountHeader:hover {
-    background-color: #3b49df;
-    color: #fff;
-    text-decoration: underline;
+  background-color: #3b49df;
+  color: #fff;
+  text-decoration: underline;
 }
 
 .searchContainer a {
-    text-decoration: none;
-    color: #3b49df;
-    border-radius: 4px;
-    padding: 7px 15px;
+  text-decoration: none;
+  color: #3b49df;
+  border-radius: 4px;
+  padding: 7px 15px;
 }
 
 .searchContainer a:hover {
-    text-align: center;
-    background-color: #3b49df1a;
-    text-decoration: underline;
+  text-align: center;
+  background-color: #3b49df1a;
+  text-decoration: underline;
 }
 
 body {
-    background: rgb(245, 245, 245);
-    font-family: apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Helvetica,
-        Arial, sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol";
-    margin: 0;
+  background: rgb(245, 245, 245);
+  font-family: apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Helvetica,
+    Arial, sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol";
+  margin: 0;
 }
 
 .logo {
-    height: 40px;
-    width: 50px;
+  height: 40px;
+  width: 50px;
 }
 
 .asideLeft {
-    width: 232px;
+  width: 232px;
 
-    margin: 10px;
+  margin: 10px;
 }
 
 .logInBox {
-    display: flex;
-    background: #fff;
-    flex-direction: column;
-    border-radius: 10px;
-    padding: 16px;
+  display: flex;
+  background: #fff;
+  flex-direction: column;
+  border-radius: 10px;
+  padding: 16px;
 }
 
 .logInButtons {
-    display: flex;
-    align-items: center;
-    gap: 5px;
-    font-size: 16px;
-    flex-direction: column;
-    padding: 10px;
+  display: flex;
+  align-items: center;
+  gap: 5px;
+  font-size: 16px;
+  flex-direction: column;
+  padding: 10px;
 }
 
 .logInBox a {
-    text-decoration: none;
-    color: black;
-    font-size: 16px;
-    border-radius: 4px;
-    padding: 7px 15px;
+  text-decoration: none;
+  color: black;
+  font-size: 16px;
+  border-radius: 4px;
+  padding: 7px 15px;
 }
 
 #createAccountBtn {
-    color: #3b49df;
-    text-align: center;
-    width: 90%;
-    font-size: 16px;
-    border-radius: 4px;
-    padding: 7px 15px;
-    border: 1px solid #3b49df;
+  color: #3b49df;
+  text-align: center;
+  width: 90%;
+  font-size: 16px;
+  border-radius: 4px;
+  padding: 7px 15px;
+  border: 1px solid #3b49df;
 }
 
 #createAccountBtn:hover {
-    background-color: #3b49df;
-    color: #fff;
-    text-decoration: underline;
+  background-color: #3b49df;
+  color: #fff;
+  text-decoration: underline;
 }
 
 #logInAside:hover {
-    text-align: center;
-    background-color: #3b49df1a;
-    width: 90%;
+  text-align: center;
+  background-color: #3b49df1a;
+  width: 90%;
 
-    text-decoration: underline;
+  text-decoration: underline;
 }
 
 .asideNav {
-    width: 100%;
-    margin-top: 30px;
+  width: 100%;
+  margin-top: 30px;
 }
 
 .asideNav ul {
-    display: flex;
-    align-self: start;
-    flex-direction: column;
-    margin: 0;
-    padding-left: 0;
-    width: 100%;
+  display: flex;
+  align-self: start;
+  flex-direction: column;
+  margin: 0;
+  padding-left: 0;
+  width: 100%;
 }
 
 .asideNav li {
-    list-style: none;
+  list-style: none;
 
-    padding: 7px 15px;
+  padding: 7px 15px;
 }
 
 .asideNav a {
-    font-size: 15px;
-    text-decoration: none;
-    width: 100%;
+  font-size: 15px;
+  text-decoration: none;
+  width: 100%;
 
-    color: black;
+  color: black;
 }
 
 .asideNav li:hover {
-    background-color: #3b49df1a;
-    width: 80%;
-    border-radius: 4px;
-    text-decoration: underline;
+  background-color: #3b49df1a;
+  width: 80%;
+  border-radius: 4px;
+  text-decoration: underline;
 }
 
 i {
-    font-size: 17px;
+  font-size: 17px;
 }
 
 .asideNav i {
-    margin-right: 15px;
+  margin-right: 15px;
 }
 
 .other {
-    margin-bottom: 30px;
+  margin-bottom: 30px;
 }
 
 .asideIcons i {
-    font-size: 23px;
-    padding: 5px;
-    margin-right: 0;
+  font-size: 23px;
+  padding: 5px;
+  margin-right: 0;
 }
 
 .asideIcons i:hover {
-    padding: 5px;
-    background: #3b49df1a;
+  padding: 5px;
+  background: #3b49df1a;
 }
