--- a/css/to-junior-dev.css
+++ b/css/to-junior-dev.css
@@ -56,6 +56,9 @@ img.fullWidth {
 .mainTitle {
   font-size: 20px;
   margin-top: 10px;
+  @media (min-width: 640px) {
+    font-size: 30px;
+  }
 }
 
 .tagSection {
@@ -96,4 +99,11 @@ img.fullWidth {
   color: #717171;
   display: flex;
   gap: 10px;
+}
+
+.showOnTabletOnly {
+  display: none;
+  @media (min-width: 640px) {
+    display: block;
+  }
 }
