--- a/css/discuss.css
+++ b/css/discuss.css
@@ -1,132 +1,59 @@
 #sidebarRight {
-    display: block;
-    width: 1fr;
+    display: flex;
+    width: 25%;
+    margin: 5px;
+    position:absolute;
+    padding: 5%;
+    justify-content: flex-end;
 
 }
 
 .rightSidebar{
-    font: size 1rem;
+    font: size 10px;
+    margin: auto;
+    justify-content: flex-end;
 }
 .rightAditional {
     display: grid;
 }
 
-.rightHeader {
-    display: flex;
-}
-.post {
-    background: white; 
-    box-shadow: 0 0 0 1px;
-    margin: 0;
-    position: relative; 
-    padding: 1%; 
-    border:  1px transparent;
-    display: flexbox;   
-}
-
-.postBody {
-    display: flex;
-} 
-
-.postTop{
-    display: flex;
-    align-items: center;
-    justify-content: space-between;
-    margin-bottom: var(--su.3);
-}
-
- .profileImage {
-    width: 40px;
-    height: 40px;
-    border-radius: 50%;
-    order: 10px solid #e3e3e3;
-    margin: 1em;
-    overflow: hidden;
-    display:inline-block
-    vertical-align: middle;
-    color: rgb( 64, 64, 64 );
+.card{
+    outline: #fff;
+    margin:5%;
 
 }
-.profileImage  img {
-    width: 100%;
-    height: auto;
+
+button{
+    border: auto  #f5f5f5;
+
 }
 
-.profileInfo {
-    display: flex;
-    justify-content: flex-start;
-    align-items: center;
-    max-width: 346px;
-    max-height: 42px;
-    gap: 10px;
-
-} 
-
-.postTitle{
-    display: flex;
-}
 a {
     text-decoration: none;
     color: black;
+    
+    
 }
-.postTitle:hover {
+a:hover {
     color: blue;
 }
+.comments:hover{
+    color: black;
 
-
-img.fullWidth {
-    width: 100%;
-    height: auto;
-    object-fit: contain;
-    padding-left: -20px;
 }
 
-.juniorDevSectionPadding {
-    padding: 12px 12px 0 12px ;
-}
-
-
-.column {
+.card {
     display: flex;
+    background: #fff;
     flex-direction: column;
-    height: 42px;
-}
+    border-radius: 10px;
+    padding: 16px;
+  }
 
-.profile-subtitle{
-    font-size: 12px;
-    color: #717171;
-    font-weight: 300;
-}
-
-.emoji-section {
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    gap: 20px;
-    flex-wrap: wrap;
-    justify-content: flex-start;
-}
-
-.emoji {
-    display: flex;
-    gap: 8px;
-}
-
-.mainTitle {
-    font-size: 30px;
-}
-
-.psotTags {
-    display: flex;
-    gap: 20px;
-}
-
-.tags{
-    background: transparent;
-    color:#717171;
-    display: flex;
-    align-items: center;
-    flex-wrap: wrap;
-    font-weight: 300;
-    font-size: 15px;
+.widget {
+    position: relative;
+    overflow: hidden;
+    display: block;
+    padding: 0 16px 16px;
+    margin: 8px 0 16px 0;
 }
