--- a/css/discuss.css
+++ b/css/discuss.css
@@ -1,12 +1,78 @@
-#sidebarRight {
-  display: flex;
-  width: 25%;
-  margin: 5px;
-  position: absolute;
-  padding: 5%;
-  justify-content: flex-end;
-}
-
+.sideCard {
+    width: 308px;
+    height: 512px;
+    background-color: #fff;
+    border-radius: 10px;
+    color: black;
+    padding: 10px;
+    margin: 0 auto;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+    margin-bottom: 10px;
+  }
+  
+  .sideCard p {
+    margin: 5px 0px;
+  }
+  
+  .sideCard .linkAndCommentSection:not(:last-child) {
+    border-bottom: 1px solid #f5f5f5;
+  }
+  
+  .cardTitle {
+    color: #404040;
+    font-size: 20px;
+    font-weight: 600;
+    padding-bottom: 10px;
+    border-bottom: 1px solid #f5f5f5;
+  }
+  
+  .sideCardLink {
+    color: #717171;
+    font-size: 17px;
+  }
+  
+  .sideCardComment  {
+    color: #717171;
+    font-size: 14px;
+  }
+  
+  .sideCardComment:hover {
+      color: #717171; 
+  }
+  
+  .linkAndCommentSection {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    min-height: 82px;
+  }
+  
+a {
+    text-decoration: none;
+    color: black;
+  }
+  a:hover {
+    color: blue;
+  }
+  
+  .widget {
+    position: relative;
+    overflow: hidden;
+    display: block;
+    padding: 0 16px 16px;
+    margin: 8px 0 16px 0;
+  }
+  
+  .grid {
+    display: grid;
+    grid-column: 3;
+    grid-gap: 10px;
+    grid-auto-rows: minmax(100px, auto);
+    margin-bottom: 10px;
+  }
+/*
 .rightSidebar {
   font: size 10px;
   margin: auto;
@@ -21,20 +87,9 @@
   margin: 5%;
 }
 
-button {
-  border: auto #f5f5f5;
-}
 
-a {
-  text-decoration: none;
-  color: black;
-}
-a:hover {
-  color: blue;
-}
-.comments:hover {
-  color: black;
-}
+
+
 
 .card {
   display: flex;
@@ -42,58 +97,6 @@ a:hover {
   flex-direction: column;
   border-radius: 10px;
   padding: 16px;
-}
+} */
 
-.widget {
-  position: relative;
-  overflow: hidden;
-  display: block;
-  padding: 0 16px 16px;
-  margin: 8px 0 16px 0;
-}
 
-.sideCard {
-  width: 308px;
-  height: 512px;
-  background-color: #fff;
-  border-radius: 10px;
-  color: black;
-  padding: 10px;
-  margin: 0 auto;
-  display: flex;
-  flex-direction: column;
-  justify-content: space-between;
-}
-
-.sideCard p {
-  margin: 5px 0px;
-}
-
-.sideCard .linkAndCommentSection:not(:last-child) {
-  border-bottom: 1px solid #f5f5f5;
-}
-
-.cardTitle {
-  color: #404040;
-  font-size: 20px;
-  font-weight: 600;
-  padding-bottom: 10px;
-  border-bottom: 1px solid #f5f5f5;
-}
-
-.sideCardLink {
-  color: #717171;
-  font-size: 17px;
-}
-
-.sideCardComment {
-  color: #717171;
-  font-size: 14px;
-}
-
-.linkAndCommentSection {
-  display: flex;
-  flex-direction: column;
-  justify-content: center;
-  min-height: 82px;
-}
