--- a/css/discuss.css
+++ b/css/discuss.css
@@ -1,59 +1,98 @@
 #sidebarRight {
-    display: flex;
-    width: 25%;
-    margin: 5px;
-    position:absolute;
-    padding: 5%;
-    justify-content: flex-end;
-
+  display: flex;
+  width: 25%;
+  margin: 5px;
+  position: absolute;
+  padding: 5%;
+  justify-content: flex-end;
 }
 
-.rightSidebar{
-    font: size 10px;
-    margin: auto;
-    justify-content: flex-end;
+.rightSidebar {
+  font: size 10px;
+  margin: auto;
+  justify-content: flex-end;
 }
 .rightAditional {
-    display: grid;
-}
-
-.card{
-    outline: #fff;
-    margin:5%;
-
-}
-
-button{
-    border: auto  #f5f5f5;
-
-}
-
-a {
-    text-decoration: none;
-    color: black;
-    
-    
-}
-a:hover {
-    color: blue;
-}
-.comments:hover{
-    color: black;
-
+  display: grid;
 }
 
 .card {
-    display: flex;
-    background: #fff;
-    flex-direction: column;
-    border-radius: 10px;
-    padding: 16px;
-  }
+  outline: #fff;
+  margin: 5%;
+}
+
+button {
+  border: auto #f5f5f5;
+}
+
+a {
+  text-decoration: none;
+  color: black;
+}
+a:hover {
+  color: blue;
+}
+.comments:hover {
+  color: black;
+}
+
+.card {
+  display: flex;
+  background: #fff;
+  flex-direction: column;
+  border-radius: 10px;
+  padding: 16px;
+}
 
 .widget {
-    position: relative;
-    overflow: hidden;
-    display: block;
-    padding: 0 16px 16px;
-    margin: 8px 0 16px 0;
+  position: relative;
+  overflow: hidden;
+  display: block;
+  padding: 0 16px 16px;
+  margin: 8px 0 16px 0;
+}
+
+.sideCard {
+  width: 308px;
+  height: 512px;
+  background-color: #fff;
+  border-radius: 10px;
+  color: black;
+  padding: 10px;
+  margin: 0 auto;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+}
+
+.sideCard p {
+  margin: 5px 0px;
+}
+
+.sideCard .linkAndCommentSection:not(:last-child) {
+  border-bottom: 1px solid #f5f5f5;
+}
+
+.cardTitle {
+  color: #404040;
+  font-size: 20px;
+  font-weight: 600;
+  padding-bottom: 10px;
+}
+
+.sideCardLink {
+  color: #717171;
+  font-size: 17px;
+}
+
+.sideCardComment {
+  color: #717171;
+  font-size: 14px;
+}
+
+.linkAndCommentSection {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  min-height: 82px;
 }
