--- a/css/discuss.css
+++ b/css/discuss.css
@@ -58,37 +58,53 @@ a {
   }
   
   .widget {
+    width: 242px;
+    height: 1978.26px;
     position: relative;
+    display: flex;
     overflow: hidden;
-    display: block;
-    padding: 0 16px 16px;
-    margin: 8px 0 16px 0;
+    padding: 0px 16px 16px 16px;
+    margin: 8px 0px 16px;
   }
-  
+  .widget  h4 {
+    width: 210px;
+    height: 21.594px;
+    font-family:monospace;
+    font-size: 14.4px;
+    color: #171717;
+    font-weight: 600;
+    background-color:  #f5f5f5;
+  }
   .grid {
-    display: grid;
-    grid-column: 3;
+    display: flex;
+    flex-wrap:wrap;
     grid-gap: 10px;
     grid-auto-rows: minmax(100px, auto);
     margin-bottom: 10px;
   }
-/*
-.rightSidebar {
-  font: size 10px;
-  margin: auto;
-  justify-content: flex-end;
+.widgetList {
+    display: block;
+   
 }
-.rightAditional {
-  display: grid;
+    
+.widgetLinks {
+    width: 170px;
+    height: 72.000px;
+    padding: 16px;
+    color: #404040;
+    font-size: 16px;s
+    min-height: 82px;
+    display: block;
+    border-bottom: 1px solid #f5f5f5;
 }
 
+
+}
+/*
 .card {
   outline: #fff;
   margin: 5%;
 }
-
-
-
 
 
 .card {
