--- a/css/discuss.css
+++ b/css/discuss.css
@@ -78,6 +78,7 @@ a:hover {
   font-size: 20px;
   font-weight: 600;
   padding-bottom: 10px;
+  border-bottom: 1px solid #f5f5f5;
 }
 
 .sideCardLink {
