--- a/css/to-junior-dev.css
+++ b/css/to-junior-dev.css
@@ -1,109 +1,123 @@
 .juniorCard {
-  background-color: #fff;
-  margin-bottom: 10px;
+    background-color: #fff;
+    margin-bottom: 10px;
 }
 
 img.fullWidth {
-  width: 100%;
-  height: auto;
-  object-fit: contain;
-  padding-left: -20px;
+    width: 100%;
+    height: auto;
+    object-fit: contain;
+    padding-left: -20px;
+
+    @media (min-width: 768px) {
+        border-radius: 10px 10px 0 0;
+    }
 }
 
 .juniorDevSectionPadding {
-  padding: 16px 16px 12px 16px;
+    padding: 16px 16px 12px 16px;
+
+    @media (min-width: 1024px) {
+        padding: 20px;
+    }
 }
 
 .profileImage {
-  width: 40px;
-  height: 40px;
+    width: 40px;
+    height: 40px;
 }
 
 .profileInfo {
-  display: flex;
-  justify-content: flex-start;
-  align-items: center;
-  max-width: 346px;
-  max-height: 42px;
-  gap: 10px;
+    display: flex;
+    justify-content: flex-start;
+    align-items: center;
+    max-width: 346px;
+    max-height: 42px;
+    gap: 10px;
 }
 
 .column {
-  display: flex;
-  flex-direction: column;
-  height: 42px;
+    display: flex;
+    flex-direction: column;
+    height: 42px;
 }
 
 .profile-subtitle {
-  font-size: 12px;
-  color: #717171;
-  font-weight: 300;
+    font-size: 12px;
+    color: #717171;
+    font-weight: 300;
 }
 
 .emoji-section {
-  display: flex;
-  justify-content: space-between;
-  align-items: center;
-  gap: 10px;
-  flex-wrap: wrap;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    gap: 10px;
+    flex-wrap: wrap;
 }
 
 .emoji {
-  display: flex;
-  gap: 8px;
+    display: flex;
+    gap: 8px;
 }
 
 .mainTitle {
-  font-size: 20px;
-  margin-top: 10px;
-  @media (min-width: 640px) {
-    font-size: 30px;
-  }
+    font-size: 20px;
+    margin-top: 10px;
+    @media (min-width: 640px) {
+        font-size: 30px;
+    }
 }
 
 .tagSection {
-  display: flex;
-  gap: 20px;
+    display: flex;
+    gap: 20px;
 }
 
 .tags {
-  background: transparent;
-  color: #717171;
-  display: flex;
-  align-items: center;
-  flex-wrap: wrap;
-  font-weight: 300;
-  font-size: 14px;
+    background: transparent;
+    color: #717171;
+    display: flex;
+    align-items: center;
+    flex-wrap: wrap;
+    font-weight: 300;
+    font-size: 14px;
 }
 
 .commentSection {
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  gap: 20px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    gap: 20px;
 }
 
 .setOfEmojis {
-  display: flex;
-  justify-content: center;
-  align-items: center;
+    display: flex;
+    justify-content: center;
+    align-items: center;
 }
 
 .emojiText {
-  font-size: 12px;
-  color: #717171;
+    font-size: 12px;
+    color: #717171;
 }
 
 .bookmarkSection {
-  font-size: 12px;
-  color: #717171;
-  display: flex;
-  gap: 10px;
+    font-size: 12px;
+    color: #717171;
+    display: flex;
+    gap: 10px;
 }
 
 .showOnTabletOnly {
-  display: none;
-  @media (min-width: 640px) {
-    display: block;
-  }
+    display: none;
+    @media (min-width: 640px) {
+        display: block;
+    }
+}
+
+.paddingOnDesktop {
+    @media (min-width: 1024px) {
+        padding-left: 40px;
+    }
 }
