--- a/css/discuss.css
+++ b/css/discuss.css
@@ -1,93 +1,92 @@
 .sideCard {
-    width: 308px;
-    height: 512px;
-    background-color: #fff;
-    border-radius: 10px;
-    color: black;
-    padding: 10px;
-    margin: 0 auto;
-    display: flex;
-    flex-direction: column;
-    justify-content: space-between;
-    margin-bottom: 10px;
-  }
-  
-  .sideCard p {
-    margin: 5px 0px;
-  }
-  
-  .sideCard .linkAndCommentSection:not(:last-child) {
-    border-bottom: 1px solid #f5f5f5;
-  }
-  
-  .cardTitle {
-    color: #404040;
-    font-size: 20px;
-    font-weight: 600;
-    padding-bottom: 10px;
-    border-bottom: 1px solid #f5f5f5;
-  }
-  
-  .sideCardLink {
-    color: #717171;
-    font-size: 17px;
-  }
-  
-  .sideCardComment  {
-    color: #717171;
-    font-size: 14px;
-  }
-  
-  .sideCardComment:hover {
-      color: #717171; 
-  }
-  
-  .linkAndCommentSection {
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    min-height: 82px;
-  }
-  
-a {
-    text-decoration: none;
-    color: black;
-  }
-  a:hover {
-    color: blue;
-  }
-  
-  .widget {
-    width: 242px;
-    height: 1978.26px;
-    position: relative;
-    display: flex;
-    overflow: hidden;
-    padding: 0px 16px 16px 16px;
-    margin: 8px 0px 16px;
-  }
-  .widget  h4 {
-    width: 210px;
-    height: 21.594px;
-    font-family:monospace;
-    font-size: 14.4px;
-    color: #171717;
-    font-weight: 600;
-    background-color:  #f5f5f5;
-  }
-  .grid {
-    display: flex;
-    flex-wrap:wrap;
-    grid-gap: 10px;
-    grid-auto-rows: minmax(100px, auto);
-    margin-bottom: 10px;
-  }
-.widgetList {
-    display: block;
-   
+  width: 308px;
+  height: 512px;
+  background-color: #fff;
+  border-radius: 10px;
+  color: black;
+  padding: 10px;
+  margin: 0 auto;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+  margin-bottom: 10px;
 }
-    
-.widgetLinks {
+
+.sideCard p {
+  margin: 5px 0px;
+}
+
+.sideCard .linkAndCommentSection:not(:last-child) {
+  border-bottom: 1px solid #f5f5f5;
+}
+
+.cardTitle {
+  color: #404040;
+  font-size: 20px;
+  font-weight: 600;
+  padding-bottom: 10px;
+  border-bottom: 1px solid #f5f5f5;
+}
+
+.sideCardLink {
+  color: #717171;
+  font-size: 17px;
+}
+
+.sideCardComment {
+  color: #717171;
+  font-size: 14px;
+}
+
+.sideCardComment:hover {
+  color: #717171;
+}
+
+.linkAndCommentSection {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  min-height: 82px;
+}
+
+a {
+  text-decoration: none;
+  color: black;
+}
+a:hover {
+  color: blue;
+}
+
+.widget {
+  width: 242px;
+  height: 1978.26px;
+  position: relative;
+  display: flex;
+  overflow: hidden;
+  padding: 0px 16px 16px 16px;
+  margin: 8px 0px 16px;
+}
+.widget h4 {
+  width: 210px;
+  height: 21.594px;
+  font-family: monospace;
+  font-size: 14.4px;
+  color: #171717;
+  font-weight: 600;
+  background-color: #f5f5f5;
+}
+.grid {
+  display: flex;
+  flex-wrap: wrap;
+  grid-gap: 10px;
+  grid-auto-rows: minmax(100px, auto);
+  margin-bottom: 10px;
+}
+.widgetList {
+  display: block;
+}
+
+/* .widgetLinks {
     width: 170px;
     height: 72.000px;
     padding: 16px;
@@ -99,7 +98,7 @@ a {
 }
 
 
-}
+} */
 /*
 .card {
   outline: #fff;
@@ -114,5 +113,3 @@ a {
   border-radius: 10px;
   padding: 16px;
 } */
-
-
