--- a/css/sideCard.css
+++ b/css/sideCard.css
@@ -1,3 +1,15 @@
+.sideCardContainer{
+    display: none;
+}
+
+@media only screen and (min-width: 1024px) {
+
+    .sideCardContainer {
+      display: block; /* Oculta el elemento en dispositivos con un ancho de pantalla de 767 píxeles o menos (por ejemplo, tabletas y móviles) */
+    }
+    
+}
+
 .sideCard {
     width: 308px;
     height: 512px;
@@ -49,10 +61,75 @@
     min-height: 82px;
 }
 
-a {
+.linkAndCommentSection a {
     text-decoration: none;
     color: black;
 }
-a:hover {
+.linkAndCommentSection a:hover {
     color: blue;
 }
+
+.widget {
+    width: 100%;
+    height: 1448px;
+    position: relative;
+    display: flex;
+    flex-direction: column;
+    overflow:hidden;
+    padding: 0px 16px 16px 16px;
+    margin: 8px 0px 16px 0px;
+    border-radius: 10px;
+    padding: 10px;
+    margin: 8px 0 16px 0;
+    justify-content: flex-start;
+    
+}
+  
+  .widget a {
+    text-decoration: none;
+    color: black;
+  }
+
+  .widget a:hover { 
+    color: blue;
+  }
+
+  .widget h4 {
+    width: 210px;
+    height: 21.594px;
+    font-family: monospace;
+    font-size: 14.4px;
+    color: #171717;
+    font-weight: 600;
+    background-color: #f5f5f5;
+    padding: 0;
+  }
+  
+  .widgetList {
+    display: flex;
+    width: 170px;
+    height: 72.000px;
+    flex-direction: column;
+    margin-top: 0;
+  }
+  
+   .widgetLinks {
+    justify-items: center;
+    width: 300px;
+    height: 72.000px;
+      padding: 16px;
+      color: #404040;
+      font-size: 16px;
+      border-bottom: 0.0667px solid #f5f5f5;
+  }
+  
+ .widgetLinks:hover {
+    background-color: white;
+  }
+
+.widgetLinks:last-child{
+     
+        border-bottom: 1px solid black;
+}
+  
+  
