--- a/css/style.css
+++ b/css/style.css
@@ -9,6 +9,12 @@ body {
     background-color: #f5f5f5;
 }
 
+main {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+
 h1,
 h2,
 h3,
@@ -30,7 +36,7 @@ h4 {
 @media screen and (min-width: 741px) {
     .hamburger {
         position: absolute;
-        left: -40px;
+        top: -40px;
     }
 
     .glassIcon {
@@ -91,6 +97,15 @@ h4 {
 }
 
 header {
+    background: #fff;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+.headerContainer {
+    max-width: 1280px;
+    width: 100%;
     position: relative;
     display: flex;
     justify-content: space-between;
@@ -273,6 +288,10 @@ i {
 .asideIcons i:hover {
     padding: 5px;
     background: #3b49df1a;
+}
+
+.mainContainer {
+    max-width: 1280px;
 }
 
 /* not part of the navbar don't touch */
