--- a/css/to-junior-dev.css
+++ b/css/to-junior-dev.css
@@ -1,6 +1,7 @@
 .juniorCard {
-    background-color: #fff;
+    background-color: #f5f5f5;
     margin-bottom: 10px;
+    border-radius: 10px;
 }
 
 img.fullWidth {
@@ -16,6 +17,9 @@ img.fullWidth {
 
 .juniorDevSectionPadding {
     padding: 16px 16px 12px 16px;
+    background-color: #fff;
+    margin-bottom: 10px;
+    border-radius: 10px;
 
     @media (min-width: 1024px) {
         padding: 20px;
@@ -25,6 +29,7 @@ img.fullWidth {
 .profileImage {
     width: 40px;
     height: 40px;
+    border-radius: 50px;
 }
 
 .profileInfo {
