--- a/css/style.css
+++ b/css/style.css
@@ -294,6 +294,26 @@ i {
     max-width: 1280px;
 }
 
+.middleNav {
+    background-color: #f5f5f5;
+    height: 44px;
+    display: flex;
+    align-items: center;
+    gap: 10px;
+}
+
+.middleNav a {
+    text-decoration: none;
+    color: #575757;
+    padding: 8px 12px;
+}
+
+.middleNav a:hover {
+    background-color: #fff;
+    color: #3b49df;
+    border-radius: 8px;
+}
+
 /* not part of the navbar don't touch */
 
 .mainContainer {
