--- a/css/sideCard.css
+++ b/css/sideCard.css
@@ -138,9 +138,18 @@
     overflow: scroll;
     scrollbar-base-color: transparent;
     padding: 8px 16px;
+    margin-bottom: 25px;
+
+    @media (min-width: 780px) {
+        padding: 8px 0;
+    }
 }
 .popularTags h2 {
     padding: 8px 16px;
+
+    @media (min-width: 780px) {
+        padding: 8px 0;
+    }
 }
 
 .box1 {
