--- a/css/style.css
+++ b/css/style.css
@@ -22,6 +22,10 @@ h4 {
     margin: 0;
 }
 
+.navBarContainer {
+    width: 1280px;
+}
+
 @media screen and (min-width: 768px) {
     .hamburger {
         position: relative;
@@ -111,6 +115,7 @@ header {
     justify-content: space-between;
     background: #fff;
     height: 60px;
+    min-width: 410px;
 }
 
 .inputNav {
@@ -123,7 +128,7 @@ header {
 .hamburgerContainer {
     display: flex;
     align-items: center;
-    padding: 20px;
+    padding-left: 29px;
     gap: 10px;
 }
 
@@ -290,16 +295,13 @@ i {
     background: #3b49df1a;
 }
 
-.mainContainer {
-    max-width: 1280px;
-}
-
 .middleNav {
     background-color: #f5f5f5;
     height: 44px;
     display: flex;
     align-items: center;
     gap: 10px;
+    margin-left: 10px;
 }
 
 .middleNav a {
@@ -317,10 +319,17 @@ i {
 /* not part of the navbar don't touch */
 
 .mainContainer {
+    box-sizing: border-box;
+    max-width: 1280px;
+
     @media (min-width: 768px) {
         display: grid;
-        grid-template-columns: 232px minmax(480px, 2fr) 1fr;
+        grid-template-columns: 232px minmax(480px, 2fr);
         gap: 20px;
         padding: 16px;
+    }
+
+    @media (min-width: 1024px) {
+        grid-template-columns: 232px minmax(480px, 2fr) 1fr;
     }
 }
