--- a/css/to-junior-dev.css
+++ b/css/to-junior-dev.css
@@ -15,11 +15,10 @@ img.fullWidth {
 }
 
 .juniorDevSectionPadding {
-    padding: 16px 16px 12px 16px;
+    padding: 25px;
     background-color: #fff;
     margin-bottom: 10px;
     border-radius: 10px;
-
     @media (min-width: 1024px) {
         padding: 20px;
     }
@@ -38,6 +37,7 @@ img.fullWidth {
     max-width: 346px;
     max-height: 42px;
     gap: 10px;
+    box-sizing: border-box;
 }
 
 .column {
@@ -79,7 +79,7 @@ img.fullWidth {
 
 .tagSection {
     display: flex;
-    gap: 20px;
+    gap: 10px;
 }
 
 .tags {
