--- a/css/sideCard.css
+++ b/css/sideCard.css
@@ -118,6 +118,7 @@
     color: #404040;
     font-size: 16px;
     border-bottom: 0.0667px solid #f5f5f5;
+    max-width: 200px;
 }
 
 .widgetLinks:hover {
